--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
---- ESTOY CON EL RESIZE ---
+--- ESTOY CON EL LOS MARGINS ---
 Vamos a intentar crear un resizeObserver y asignarlo a los charts. De esta forma,
 cuando se detecte un evento de resize se vuelven a dibujar los ejes (de momento solo 
 esto)
